Actually fix the tests and maybe fix the header going off the screen on mobile
maybe? hopefully?

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -91,7 +91,7 @@ header {
 
     span#nav-button {
         margin-left: auto;
-        margin-right: 8px;
+        margin-right: 16px;
         font-size: 2em;
         cursor: pointer;
     }
@@ -99,7 +99,7 @@ header {
 
 @media (max-width: 1090px) {
     header {
-        width: 96vw;
+        width:100vw;
         nav {
             display: none;
             position: fixed;
